2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/irq-config.h: Removed file.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* irq/irq.h, startup/bspstart.c: Remove warnings.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/consolebsp.h: Remove extraneous #warning.

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for exception support changes.
	* irq/irq.c, irq/irq_init.c, irq/no_pic.c: Changed exception header
	file includes.  Fixes for type changes.
	* startup/bspstart.c: Changed exception header file includes.  Update
	for ppc_exc_initialize() changes.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/score603e.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-16	Jennifer Averett <jennifer@OARcorp.com>

	* configure.ac: Default to having PSC8 mezzanine so code builds
	all the time.
	* startup/bspstart.c: Calibrated clock using an VMEBus controlled
	discrete pulsed at a 20ms rate.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/score603e.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c, startup/genpvec.c, startup/setvec.c: Disable call
	to rtems_interrupt_catch until it is fixed. Need to disabled
	set_vector.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to