@@ -1,3 +1,10 @@
+2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	PR 1573/cpukit
+	* irq/irq.c: Add a per cpu data structure which contains the
+	information required by RTEMS for each CPU core. This encapsulates
+	information such as thread executing, heir, idle and dispatch needed.
+
 2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* include/irq-config.h: Removed file.
